Fixed issue with aside col missing padding on iPad.

--- a/public/assets/css/at_media.css
+++ b/public/assets/css/at_media.css
@@ -49,7 +49,6 @@
     }
     .aside-col {
         outline: none;
-        padding: 0 0 30px 0;
     }
 
     .cat-table .cat-table-latest {
@@ -185,6 +184,10 @@
     .thread-comment {
         margin-left: 10px;
         margin-right: 10px;
+    }
+
+    .aside-col {
+        padding: 0 0 30px 0;
     }
 
     .comment-avatar {
